# WebDocumentationRAG

./: Dockerfile  README.md  ejemplo.env  pyproject.toml  requirements.txt
src/: api_handler.py  cargueBD.py  query_model.py
src/data/chroma/f7da76cc-d48f-4623-a7dd-924ce2e209a1/: index_metadata.pickle
src/rag_app/: get_chroma_db.py  get_embedding.py  get_model.py  langgraph_process.py  query_rag-backup.py  query_rag.py
